--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -19,3 +19,9 @@ spring:
 mybatis-plus:
   configuration:
     log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
+minio:
+  endpoint: http://192.168.20.30:9000
+  access-key: minioadmin
+  secret-key: minioadmin
+  bucket-name: edu
+  secure: false
